# Image-Processing

./: CMakeLists.txt  README.md  README.md~  brightnesscontratcontrol.ui  contraststretchingdialog.cpp  contraststretchingdialog.h  contraststretchingdialog.ui  customdialog.cpp  customdialog.h  customdialogh.cpp  customdialogh.h  customfilter.cpp  customfilter.h  customfilter.ui  huffman.cpp  imageprocessor.cpp  imageprocessor.h  imageviewer.cpp  imageviewer.h  imageviewer.pro  main.cpp  pixel.cpp  pixel.h  resamplingscaledialog.cpp  resamplingscaledialog.h  resamplingscaledialog.ui
